--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         }
     ],
     "require": {
-        "pear-pear.horde.org/Horde_Imap_Client": ">=2.29.17",
+        "pear-pear.horde.org/horde_imap_client": ">=2.29.17",
 	"phpoffice/phpspreadsheet": ">=1.0"
     }
 }
